# dune-alugrid

./: .gitlab-ci.yml  CMakeLists.txt  config.h.cmake  dune.module  package.py
cmake/modules/: DuneAlugridMacros.cmake
dune/alugrid/: dgf.hh
dune/alugrid/3d/: CMakeLists.txt  alugrid.hh  communication.hh  entity.hh  entity_imp.cc  grid.hh  grid_imp.cc  grid_inline.hh  gridfactory.cc  gridfactory.hh  indexsets.cc  indexsets.hh  iterator.cc
dune/alugrid/common/: CMakeLists.txt  bndprojection.hh  declaration.hh  defaultindexsets.hh  fromtogridfactory.hh  intersectioniteratorwrapper.hh  meshquality.hh  structuredgridfactory.hh  transformation.hh
dune/alugrid/impl/: projectvertex.h
dune/alugrid/impl/duneinterface/: gitter_dune_impl.h  gitter_dune_pll_impl.h
dune/alugrid/impl/parallel/: aluzoltan.hh  gitter_pll_impl.cc  gitter_pll_impl.h  gitter_pll_ldb.cc  gitter_pll_ldb.h  gitter_pll_mgb.cc  gitter_pll_sti.cc  mpAccess_MPI_inline.h
dune/alugrid/impl/serial/: gitter_hexa_top.cc  gitter_hexa_top.h  gitter_impl.cc  gitter_impl.h  gitter_mgb.cc  gitter_mgb.h  gitter_sti.h  gitter_tetra_top.cc  gitter_tetra_top.h  walk.h
dune/alugrid/impl/test/: CMakeLists.txt
dune/alugrid/test/: CMakeLists.txt  test-alugrid.cc  test-backup-restore.cc  test-ball-projection.cc  test-dgf.cc  test-gmsh.cc  test-iterators.cc  test-periodic.cc  testgrids.cc
dune/alugrid/test/dgf/: CMakeLists.txt  sphere.dgf
dune/python/test/: CMakeLists.txt
examples/: CMakeLists.txt  alugrid.cfg  problem-ball.hh
examples/quality/: gmsh2dgf.cc
lib/: CMakeLists.txt
python/: setup.py.in
python/dune/alugrid/: _grids.py
utils/bisection-compatibility/: CMakeLists.txt  bisectioncompatibility.hh
